# ComfyUI-Raffle

./: .gitignore  Raffle Example.json  __init__.py  curved_rescale_cfg.py  find_tags.py  preview_history.py  pyproject.toml  raffle.py  readme.md  tag_category_strength.py
.github/workflows/: publish.yml
dev/: check-missing-tags.py  copy-categories-over.py  remove-numbers-at-end-of-each-line.py  swap-in-new-categories.py
dev/categorizer/: Cursor Composer Prompt ALL.txt  extract_categories.bat  extract_categories.py  manual_categorization.txt
dev/categorizer/split_n_combine/: split_and_combine_script.py
dev/categorizer/split_n_combine/cat/: 100_categorized.txt  101_categorized.txt  102_categorized.txt  103_categorized.txt  104_categorized.txt  105_categorized.txt  106_categorized.txt  107_categorized.txt  108_categorized.txt  109_categorized.txt  10_categorized.txt  110_categorized.txt  111_categorized.txt  112_categorized.txt  113_categorized.txt  114_categorized.txt  115_categorized.txt  116_categorized.txt  117_categorized.txt  118_categorized.txt  119_categorized.txt  11_categorized.txt  120_categorized.txt  121_categorized.txt  122_categorized.txt  123_categorized.txt  124_categorized.txt  125_categorized.txt  126_categorized.txt  127_categorized.txt  (+104 more)
dev/tag-scraper/: tag-scraper.py
dev/tag-scraper/tag_lists/: all_tags.txt  artist.txt  categorize_files.py  character.txt  copyright.txt  general.txt  meta.txt
dev/taglist-scraper/: danbooru-taglist-scraper.bat  danbooru-taglist-scraper.py  rearranger.py
lists/: !notes.txt  categorized_tags.txt
(+134 files in other folders)
